// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<NagPalette> KS-2271 — i18n tooltips и group-labels > snapshot en — фиксирует структуру и переводы 1`] = `
<div
  class="nag-palette"
  data-testid="nag-palette"
  role="menu"
>
  <div
    class="nag-palette__group"
    data-category="quality"
  >
    <div
      class="nag-palette__group-label"
    >
      Move quality
    </div>
    <div
      class="nag-palette__buttons"
    >
      <button
        aria-label="Good move"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="quality"
        data-nag="1"
        data-testid="nag-palette-btn-1"
        title="Good move"
        type="button"
      >
        !
      </button>
      <button
        aria-label="Mistake"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="quality"
        data-nag="2"
        data-testid="nag-palette-btn-2"
        title="Mistake"
        type="button"
      >
        ?
      </button>
      <button
        aria-label="Brilliant move"
        aria-pressed="true"
        class="nag-palette__btn nag-palette__btn--active"
        data-category="quality"
        data-nag="3"
        data-testid="nag-palette-btn-3"
        title="Brilliant move"
        type="button"
      >
        !!
      </button>
      <button
        aria-label="Blunder"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="quality"
        data-nag="4"
        data-testid="nag-palette-btn-4"
        title="Blunder"
        type="button"
      >
        ??
      </button>
      <button
        aria-label="Interesting move"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="quality"
        data-nag="5"
        data-testid="nag-palette-btn-5"
        title="Interesting move"
        type="button"
      >
        !?
      </button>
      <button
        aria-label="Dubious move"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="quality"
        data-nag="6"
        data-testid="nag-palette-btn-6"
        title="Dubious move"
        type="button"
      >
        ?!
      </button>
    </div>
  </div>
  <div
    class="nag-palette__group"
    data-category="positionEval"
  >
    <div
      class="nag-palette__group-label"
    >
      Position evaluation
    </div>
    <div
      class="nag-palette__buttons"
    >
      <button
        aria-label="Equal position"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="10"
        data-testid="nag-palette-btn-10"
        title="Equal position"
        type="button"
      >
        =
      </button>
      <button
        aria-label="Unclear position"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="13"
        data-testid="nag-palette-btn-13"
        title="Unclear position"
        type="button"
      >
        ∞
      </button>
      <button
        aria-label="White is slightly better"
        aria-pressed="true"
        class="nag-palette__btn nag-palette__btn--active"
        data-category="positionEval"
        data-nag="14"
        data-testid="nag-palette-btn-14"
        title="White is slightly better"
        type="button"
      >
        ⩲
      </button>
      <button
        aria-label="Black is slightly better"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="15"
        data-testid="nag-palette-btn-15"
        title="Black is slightly better"
        type="button"
      >
        ⩱
      </button>
      <button
        aria-label="White is clearly better"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="16"
        data-testid="nag-palette-btn-16"
        title="White is clearly better"
        type="button"
      >
        ±
      </button>
      <button
        aria-label="Black is clearly better"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="17"
        data-testid="nag-palette-btn-17"
        title="Black is clearly better"
        type="button"
      >
        ∓
      </button>
      <button
        aria-label="White has a winning advantage"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="18"
        data-testid="nag-palette-btn-18"
        title="White has a winning advantage"
        type="button"
      >
        +−
      </button>
      <button
        aria-label="Black has a winning advantage"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="19"
        data-testid="nag-palette-btn-19"
        title="Black has a winning advantage"
        type="button"
      >
        −+
      </button>
    </div>
  </div>
  <div
    class="nag-palette__divider"
  />
  <button
    class="nag-palette__delete"
    data-testid="nag-palette-delete"
    type="button"
  >
    Clear annotations
  </button>
</div>
`;

exports[`<NagPalette> KS-2271 — i18n tooltips и group-labels > snapshot ru — фиксирует структуру и переводы 1`] = `
<div
  class="nag-palette"
  data-testid="nag-palette"
  role="menu"
>
  <div
    class="nag-palette__group"
    data-category="quality"
  >
    <div
      class="nag-palette__group-label"
    >
      Качество хода
    </div>
    <div
      class="nag-palette__buttons"
    >
      <button
        aria-label="Хороший ход"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="quality"
        data-nag="1"
        data-testid="nag-palette-btn-1"
        title="Хороший ход"
        type="button"
      >
        !
      </button>
      <button
        aria-label="Ошибка"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="quality"
        data-nag="2"
        data-testid="nag-palette-btn-2"
        title="Ошибка"
        type="button"
      >
        ?
      </button>
      <button
        aria-label="Блестящий ход"
        aria-pressed="true"
        class="nag-palette__btn nag-palette__btn--active"
        data-category="quality"
        data-nag="3"
        data-testid="nag-palette-btn-3"
        title="Блестящий ход"
        type="button"
      >
        !!
      </button>
      <button
        aria-label="Грубая ошибка"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="quality"
        data-nag="4"
        data-testid="nag-palette-btn-4"
        title="Грубая ошибка"
        type="button"
      >
        ??
      </button>
      <button
        aria-label="Интересный ход"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="quality"
        data-nag="5"
        data-testid="nag-palette-btn-5"
        title="Интересный ход"
        type="button"
      >
        !?
      </button>
      <button
        aria-label="Сомнительный ход"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="quality"
        data-nag="6"
        data-testid="nag-palette-btn-6"
        title="Сомнительный ход"
        type="button"
      >
        ?!
      </button>
    </div>
  </div>
  <div
    class="nag-palette__group"
    data-category="positionEval"
  >
    <div
      class="nag-palette__group-label"
    >
      Оценка позиции
    </div>
    <div
      class="nag-palette__buttons"
    >
      <button
        aria-label="Равная позиция"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="10"
        data-testid="nag-palette-btn-10"
        title="Равная позиция"
        type="button"
      >
        =
      </button>
      <button
        aria-label="Неясная позиция"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="13"
        data-testid="nag-palette-btn-13"
        title="Неясная позиция"
        type="button"
      >
        ∞
      </button>
      <button
        aria-label="У белых небольшое преимущество"
        aria-pressed="true"
        class="nag-palette__btn nag-palette__btn--active"
        data-category="positionEval"
        data-nag="14"
        data-testid="nag-palette-btn-14"
        title="У белых небольшое преимущество"
        type="button"
      >
        ⩲
      </button>
      <button
        aria-label="У чёрных небольшое преимущество"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="15"
        data-testid="nag-palette-btn-15"
        title="У чёрных небольшое преимущество"
        type="button"
      >
        ⩱
      </button>
      <button
        aria-label="У белых явное преимущество"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="16"
        data-testid="nag-palette-btn-16"
        title="У белых явное преимущество"
        type="button"
      >
        ±
      </button>
      <button
        aria-label="У чёрных явное преимущество"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="17"
        data-testid="nag-palette-btn-17"
        title="У чёрных явное преимущество"
        type="button"
      >
        ∓
      </button>
      <button
        aria-label="У белых решающее преимущество"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="18"
        data-testid="nag-palette-btn-18"
        title="У белых решающее преимущество"
        type="button"
      >
        +−
      </button>
      <button
        aria-label="У чёрных решающее преимущество"
        aria-pressed="false"
        class="nag-palette__btn"
        data-category="positionEval"
        data-nag="19"
        data-testid="nag-palette-btn-19"
        title="У чёрных решающее преимущество"
        type="button"
      >
        −+
      </button>
    </div>
  </div>
  <div
    class="nag-palette__divider"
  />
  <button
    class="nag-palette__delete"
    data-testid="nag-palette-delete"
    type="button"
  >
    Снять аннотации
  </button>
</div>
`;
